src/assets/index.scss
html,
body {
  scroll-behavior: smooth;
}

img {
  border-radius: 1px;
}

*,
*::before,
*::after {
  box-sizing: border-box;
  margin: 0;
}

.markdown-body {
  font-size: 1.5em;

  & .hljs {
    border-radius: 2px;
  }

  & .container {
    padding: 0.1rem 1.5rem;
    border-left-width: 0.5rem;
    border-left-style: solid;
    margin: 1rem 0;

    & p {
      margin: 0;
    }
  }

  pre {
    position: relative;
    font-family: "Source Code Pro", monospace;
  }

  & .copy-btn-container {
    position: relative;
  }

  & .copy-btn {
    position: absolute;
    top: 0.5rem;
    right: 1rem;
    border: none;
    background: transparent;
    cursor: pointer;

    &:hover {
      opacity: 0.5;
    }

    & span {
      width: 100%;
      height: 100%;
      line-height: 100%;
      text-align: center;
    }
  }
}

@media (max-width: 960px) {
  .markdown-body {
    font-size: 1.2em;

    & .copy-btn {
      right: 0.3rem;
    }
  }
}

